language-platforms/java-gradle/move2kube-output/temp/myproject/deploy/yamls-parameterized/kustomize/base/java-gradle-service.yaml

---
apiVersion: v1
kind: Service
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: java-gradle
    name: java-gradle
spec:
    ports:
        - name: port-9080
          port: 9080
          targetPort: 9080
    selector:
        move2kube.konveyor.io/service: java-gradle
    type: ClusterIP
status:
    loadBalancer: {}

...
